--- a/createjs/pom.xml
+++ b/createjs/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>org.wymiwyg.sling-stanbol</groupId>
     <artifactId>createjs</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0alpha1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Createjs maven project</name>
